--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,107 @@
 #root {
   max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list_container {
+  display: flex;
+  height: 506px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 290px;
+  border-radius: 40px;
+  border: 1px solid var(--border-light, #c1b6ad);
+  transition: 0.5s;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.list_container > div {
+  background-size: cover;
+  width: 100%;
+  height: 340px;
+  border-radius: 40px;
 }
 
-.card {
-  padding: 2em;
+.list-img-wrapper1 {
+  background: url(./assets/img/coffee-1.png) no-repeat center;
 }
 
-.read-the-docs {
-  color: #888;
+.list-img-wrapper2 {
+  background: url(./assets/img/coffee-2.png) no-repeat center;
+}
+
+.list-img-wrapper3 {
+  background: url(./assets/img/coffee-3.png) no-repeat center;
+}
+
+.list-img-wrapper4 {
+  background: url(./assets/img/coffee-4.png) no-repeat center;
+}
+
+.list-img-wrapper5 {
+  background: url(./assets/img/coffee-5.png) no-repeat center;
+}
+
+.list-img-wrapper6 {
+  background: url(./assets/img/coffee-6.png) no-repeat center;
+}
+
+.list-img-wrapper7 {
+  background: url(./assets/img/coffee-7.png) no-repeat center;
+}
+
+.list-img-wrapper8 {
+  background: url(./assets/img/coffee-8.png) no-repeat center;
+}
+
+.tea-img1 {
+  background: url(./assets/img/tea-1.png) no-repeat center;
+}
+
+.tea-img2 {
+  background: url(./assets/img/tea-2.png) no-repeat center;
+}
+
+.tea-img3 {
+  background: url(./assets/img/tea-3.png) no-repeat center;
+}
+
+.tea-img4 {
+  background: url(./assets/img/tea-4.png) no-repeat center;
+}
+
+.dessert-img1 {
+  background: url(./assets/img/dessert-1.png) no-repeat center;
+}
+
+.dessert-img2 {
+  background: url(./assets/img/dessert-2.png) no-repeat center;
+}
+
+.dessert-img3 {
+  background: url(./assets/img/dessert-3.png) no-repeat center;
+}
+
+.dessert-img4 {
+  background: url(./assets/img/dessert-4.png) no-repeat center;
+}
+
+.dessert-img5 {
+  background: url(./assets/img/dessert-5.png) no-repeat center;
+}
+
+.dessert-img6 {
+  background: url(./assets/img/dessert-6.png) no-repeat center;
+}
+
+.dessert-img7 {
+  background: url(./assets/img/dessert-7.png) no-repeat center;
+}
+
+.dessert-img8 {
+  background: url(./assets/img/dessert-8.png) no-repeat center;
 }
