--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .list_container {
   display: flex;
-  height: 417px;
+  height: 446px;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -19,10 +19,10 @@
   cursor: pointer;
 }
 
-.list_container > div:first-child {
-  background-size: cover;
-  width: 100%;
-  height: 340px;
+.img_card {
+
+
+  height: 14rem;
   border-radius: 40px;
 }
 
@@ -193,7 +193,7 @@
   width: 100%;
 }
 
-.alert-wrapper > img {
+.alert-wrapper>img {
   align-self: flex-start;
   margin: 13px 8px 0 0;
 }
@@ -227,10 +227,10 @@
   color: #403f3d;
 }
 
-.modale-colum > h3,
-.modale-colum > P,
+.modale-colum>h3,
+.modale-colum>P,
 .modal-text,
-.price-wrapper > p {
+.price-wrapper>p {
   margin: 0;
 }
 
