feat: add togle dark theme

--- a/src/App.css
+++ b/src/App.css
@@ -192,7 +192,7 @@
   width: 100%;
 }
 
-.alert-wrapper > img {
+.alert-wrapper>img {
   align-self: flex-start;
   margin: 13px 8px 0 0;
 }
@@ -226,10 +226,10 @@
   color: #403f3d;
 }
 
-.modale-colum > h3,
-.modale-colum > P,
+.modale-colum>h3,
+.modale-colum>P,
 .modal-text,
-.price-wrapper > p {
+.price-wrapper>p {
   margin: 0;
 }
 
@@ -281,4 +281,18 @@
 .backgr-dark,
 .switch-item:hover {
   background-color: #665f55;
+
+}
+
+.backgr-dark h3,
+.backgr-dark p,
+.backgr-dark label,
+.backgr-dark button,
+.backgr-dark span {
+  color: antiquewhite;
+}
+
+.backgr-dark button,
+.backgr-dark .modale {
+  background-color: rgb(40, 37, 37);
 }
