--- a/src/pages/header/header.module.css
+++ b/src/pages/header/header.module.css
@@ -4,6 +4,11 @@
   width: 100%;
   justify-content: space-around;
   align-items: center;
-  padding: 1rem;
+  /* padding: 1rem 0 1rem 1rem; */
   flex-wrap: wrap;
+}
+
+.header_togleTheme {
+  width: 30px;
+  cursor: pointer;
 }
