--- a/src/components/PopUp/popUp.module.css
+++ b/src/components/PopUp/popUp.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   justify-content: space-around;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 0;
   flex-wrap: wrap;
   margin: 0 auto;
 }
