--- a/app/components/PopUp/popUp.module.css
+++ b/app/components/PopUp/popUp.module.css
@@ -1,14 +1,10 @@
-.header_wrapper {
+.popUp_wrapper {
   display: flex;
   /* background-color: burlywood; */
   width: 100%;
   justify-content: space-around;
   align-items: center;
-  /* padding: 1rem 0 1rem 1rem; */
+  padding: 1rem 0;
   flex-wrap: wrap;
-}
-
-.header_togleTheme {
-  width: 30px;
-  cursor: pointer;
+  margin: 0 auto;
 }
